--- a/pedidos.html
+++ b/pedidos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Gestão de Clientes e Pedidos</title>
+    <title>Pedidos</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="clientes.html">Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pedidos.html">Pedidos</a>
+                        <a class="nav-link active" href="pedidos.html">Pedidos</a>
                     </li>
                 </ul>
             </div>
@@ -32,12 +32,25 @@
 
     <!-- Conteúdo Principal -->
     <div class="container mt-5">
-        <h1 class="text-center">Gestão de Clientes e Pedidos</h1>
-        <div class="d-flex justify-content-center mt-4">
-            <a href="clientes.html" class="btn btn-primary mx-2">Gerenciar Clientes</a>
-            <a href="pedidos.html" class="btn btn-primary mx-2">Gerenciar Pedidos</a>
-        </div>
+        <h1 class="mb-4">Pedidos</h1>
+        <button id="btn-novo-pedido" class="btn btn-success mb-3">Novo Pedido</button>
+        <table id="tabela-pedidos" class="table table-striped">
+            <thead class="table-primary">
+                <tr>
+                    <th>Descrição</th>
+                    <th>Valor</th>
+                    <th>Status</th>
+                    <th>Cliente</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Pedidos serão carregados dinamicamente -->
+            </tbody>
+        </table>
     </div>
+
+    <script src="js/pedidos.js"></script>
 </body>
 
 </html>
