--- a/editar-cliente.html
+++ b/editar-cliente.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Clientes</title>
+    <title>Editar Cliente</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="clientes.html">Clientes</a>
+                        <a class="nav-link" href="clientes.html">Clientes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pedidos.html">Pedidos</a>
@@ -28,31 +28,31 @@
             </div>
         </div>
     </nav>
+
     <div class="container mt-5">
-        <h1 class="mb-4">Clientes</h1>
-        <div class="d-flex justify-content-between mb-3">
-            <a href="novo-cliente.html" class="btn btn-success">Novo Cliente</a>
-            <div class="d-flex w-75 justify-content-end">
-                <input type="text" id="busca-cliente" class="form-control w-25" placeholder="Buscar por Nome ou CPF">
-                <button id="btn-busca" class="btn btn-primary ms-2">Pesquisar</button>
+        <h1 class="mb-4">Editar Cliente</h1>
+        <form id="form-editar-cliente">
+            <div class="mb-3">
+                <label for="nome" class="form-label">Nome</label>
+                <input type="text" id="nome" class="form-control" required>
             </div>
-        </div>
-        <table id="tabela-clientes" class="table table-striped">
-            <thead class="table-primary">
-                <tr>
-                    <th>Nome</th>
-                    <th>CPF</th>
-                    <th>Telefone</th>
-                    <th>Endereço</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+            <div class="mb-3">
+                <label for="cpf" class="form-label">CPF</label>
+                <input type="text" id="cpf" class="form-control" required>
+            </div>
+            <div class="mb-3">
+                <label for="telefone" class="form-label">Telefone</label>
+                <input type="text" id="telefone" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="endereco" class="form-label">Endereço</label>
+                <input type="text" id="endereco" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">Salvar Alterações</button>
+        </form>
     </div>
 
-    <script src="js/clientes.js"></script>
+    <script src="js/editar-cliente.js"></script>
 </body>
 
 </html>
