--- a/editar-cliente.html
+++ b/editar-cliente.html
@@ -42,7 +42,7 @@
             </div>
             <div class="mb-3">
                 <label for="telefone" class="form-label">Telefone</label>
-                <input type="text" id="telefone" class="form-control">
+                <input type="text" id="telefone" class="form-control" required>
             </div>
             <div class="mb-3">
                 <label for="endereco" class="form-label">Endereço</label>
